# src/domains/identity/models.ts
@@ -2,3 +2,7 @@ import { components } from 'data/openapi/openapi';
 
 export type AuthBeginRequest = components['schemas']['AuthBeginRequest'];
 export type AuthBeginResponse = components['schemas']['AuthBeginResponse'];
+export type AuthCompleteRequest = components['schemas']['AuthCompleteRequest'];
+export type AuthCompleteResponse =
+  components['schemas']['AuthCompleteResponse'];
+export type AuthRefreshRequest = components['schemas']['AuthRefreshRequest'];
